--- a/68751-h/68751-h.htm
+++ b/68751-h/68751-h.htm
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pt" lang="pt">
 <head>
-    <meta charset=UTF-8"UTF-8" />
+    <meta charset="UTF-8" />
     <title>
       Estudos sobre criminalidade e educação, by Ferreira-Deusdado—A Project Gutenberg eBook
     </title>
